--- a/website/static/index.html
+++ b/website/static/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     If you are not redirected automatically, follow this
-    <a href="docs/welcome.html">link</a>.
+    <a href="/docs/docs/welcome.html">link</a>.
   </body>
 </html>
