--- a/website/static/index.html
+++ b/website/static/index.html
@@ -7,7 +7,7 @@
       content="0; url=docs/welcome.html"
     />
     <script type="text/javascript">
-      window.location.href = 'docs/welcome.html';
+      window.location.href = '/docs/docs/welcome.html';
     </script>
     <title>Your Site Title Here</title>
   </head>
