Wow, fix third reference :P

--- a/website/static/index.html
+++ b/website/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="refresh"
-      content="0; url=docs/welcome.html"
+      content="0; url=/docs/docs/welcome.html"
     />
     <script type="text/javascript">
       window.location.href = '/docs/docs/welcome.html';
