--- a/website/static/index.html
+++ b/website/static/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta
       http-equiv="refresh"
-      content="0; url=/docs/welcome.html"
+      content="0; url=./welcome.html"
     />
-    <script type="text/javascript">
-      window.location.href = '/docs/welcome.html';
-    </script>
-    <title>Your Site Title Here</title>
+    <title>Hubs Docs redirect</title>
   </head>
   <body>
     If you are not redirected automatically, follow this
-    <a href="/docs/welcome.html">link</a>.
+    <a href="./welcome.html">link</a>.
   </body>
 </html>
 
